--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   dio: ^5.3.3
   equatable: ^2.0.5
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
